--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,8 +30,9 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
-        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
 
     - name: Test with coverage
       run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
