Exclude skip-changelog label

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -16,6 +16,8 @@ categories:
     collapse-after: 3
     labels:
       - 'dependencies'
+exclude-labels:
+  - 'skip-changelog'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
   major:
