--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        go-version: [1.18, 1.17]
+        go-version: ['1.19', '1.20']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
