--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -8,23 +8,7 @@ on:
       - main
   pull_request:
 
-permissions:
-  contents: read
-  pull-requests: read
-
 jobs:
-  golangci:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.20'
-
-      - uses: actions/checkout@v3
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-          only-new-issues: true
+  go-lint:
+    name: Go Lint
+    uses: harryzcy/github-actions/.github/workflows/golangci-lint.yml@main
