--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,35 @@
-name: Go Tests
+name: Tests
 
 on:
   push:
-    branches: [main]
+    branches:
+      - "**"
+    tags-ignore:
+      - "v*"
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
+  go-tests:
+    name: Go Unit Tests
     permissions:
       id-token: write
       contents: read
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-13, macos-14]
         go-version: ["1.20", "1.21"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
+          check-latest: true
 
       - name: Build
         run: go build -v ./...
