--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,18 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+
 jobs:
   go-lint:
     name: Go Lint
     uses: harryzcy/github-actions/.github/workflows/golangci-lint.yml@main
+
+  super-linter:
+    name: Super Linter
+    uses: harryzcy/github-actions/.github/workflows/linter.yml@main
+
+  spelling:
+    name: Spelling
+    uses: harryzcy/github-actions/.github/workflows/spelling.yml@main
