--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,8 @@ jobs:
   go-lint:
     name: Go Lint
     uses: harryzcy/github-actions/.github/workflows/golangci-lint.yml@main
+    with:
+      working-directory: ./
 
   super-linter:
     name: Super Linter
