--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,16 +3,26 @@
     "config:base",
     ":disableDependencyDashboard"
   ],
-  "labels": ["dependencies"],
+  "labels": [
+    "dependencies"
+  ],
   "packageRules": [
     {
       "matchPackagePatterns": [
         "*"
       ],
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "pin",
+        "digest"
+      ],
       "automerge": true,
       "groupName": "all non-major dependencies",
       "groupSlug": "all-non-major"
     }
+  ],
+  "postUpdateOptions": [
+    "goModTidy"
   ]
 }
