--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,22 +7,13 @@
   "labels": [
     "dependencies"
   ],
-  "packageRules": [
-    {
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
-      "automerge": true,
-      "groupName": "all non-major dependencies",
-      "groupSlug": "all-non-major"
-    }
-  ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "labels": [
+      "dependencies",
+      "skip-changelog"
+    ]
+  },
   "postUpdateOptions": [
     "goModTidy"
   ]
