--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,18 +1,21 @@
 {
   "extends": [
-    "config:base",
-    ":disableDependencyDashboard"
+    "config:best-practices",
+    ":disableDependencyDashboard",
+    ":automergeMinor",
+    ":pinDependencies"
   ],
-  "labels": ["dependencies"],
-  "packageRules": [
-    {
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true,
-      "groupName": "all non-major dependencies",
-      "groupSlug": "all-non-major"
-    }
+  "labels": [
+    "dependencies"
+  ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "labels": [
+      "dependencies",
+      "skip-changelog"
+    ]
+  },
+  "postUpdateOptions": [
+    "goModTidy"
   ]
 }
