Fix removed codecov workflow inputs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,5 +55,5 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
         with:
-          file: ./coverage.txt
+          files: ./coverage.txt
           use_oidc: true
