--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       contents: read
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14, macos-15]
+        os: [ubuntu-latest, macos-14, macos-15, macos-26]
         go-version: ["1.24", "1.25"]
     runs-on: ${{ matrix.os }}
     steps:
